[package]
name = "kinesis"
version = "0.1.0"
authors = [ "Tyberius Prime <tyberius_prime@coonabibba.de>"]

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
no-std-compat = {version="0.1.0", features=["alloc", ]}

[dependencies.keytokey]
path = "../keytokey"
